--- a/src/Cake.Svn/Cake.Svn.csproj
+++ b/src/Cake.Svn/Cake.Svn.csproj
@@ -72,12 +72,17 @@
     <Compile Include="Internal\Extensions\SvnDepthExtensions.cs" />
     <Compile Include="Internal\Extensions\SvnLineStyleExtensions.cs" />
     <Compile Include="Internal\Extensions\SvnNodeKindExtensions.cs" />
+    <Compile Include="Internal\Extensions\SvnStatusExtensions.cs" />
     <Compile Include="ISvnClient.cs" />
     <Compile Include="Internal\SharpSvnClient.cs" />
     <Compile Include="Export\SvnExporter.cs" />
     <Compile Include="Export\SvnExportResult.cs" />
     <Compile Include="Export\SvnExportSettings.cs" />
     <Compile Include="Export\SvnExportSettingsExtensions.cs" />
+    <Compile Include="Status\SvnStatusTool.cs" />
+    <Compile Include="Status\SvnStatusResult.cs" />
+    <Compile Include="Status\SvnStatusSettings.cs" />
+    <Compile Include="Status\SvnStatusSettingsExtensions.cs" />
     <Compile Include="SvnAliases.Add.cs" />
     <Compile Include="SvnAliases.CleanUp.cs" />
     <Compile Include="SvnAliases.cs" />
@@ -93,6 +98,7 @@
     <Compile Include="SvnLineStyle.cs" />
     <Compile Include="SvnRemoteSettings.cs" />
     <Compile Include="SvnSettings.cs" />
+    <Compile Include="SvnStatus.cs" />
     <Compile Include="SvnTool.cs" />
     <Compile Include="Checkout\SvnCheckouter.cs" />
     <Compile Include="Checkout\SvnCheckoutSettings.cs" />
@@ -106,9 +112,8 @@
     <Compile Include="Vacuum\SvnVacuum.cs" />
     <Compile Include="Vacuum\SvnVacuumSettings.cs" />
     <Compile Include="Vacuum\SvnVacuumSettingsExtensions.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="SvnAliases.Export.cs" />
+    <Compile Include="SvnAliases.Status.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Cake.Core">
